--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
                   <div class="contains">
                     <h4>Fully Customizable</h4>
                     <p>
-                      If you have any idea or suggestion about new templates, feel free to let us know
+                      If you have any idea or suggestion about new templates, feel free to let us know . 
                     </p>
 
                   </div>
