--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <!--header and navbar-->
 
     <header>
-      <div class="container-fluid navbar_o">
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <div class="container-fluid navbar-o">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
           <div class="container-fluid">
             <div class="first_logo navbar_o1">
               <a class="navbar-brand logo" href="#"><img src="./images/logo.png" alt="logo" srcset="" /></a>
@@ -36,10 +36,10 @@
                 </li>
 
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Services</a>
+                  <a class="nav-link" href="#services">Services</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">About</a>
+                  <a class="nav-link" href="#about">About</a>
                 </li>
 
                 <li class="nav-item dropdown">
@@ -97,7 +97,7 @@
                   </p>
                   <br />
                   <button class="btn btn-success button1">
-                    <a href="#">Discover</a>
+                    <a href="#">Discover More</a>
                   </button>
                   <button class="btn button2">
                     <a href="#">Contact Us</a>
@@ -120,7 +120,7 @@
                   </p>
                   <br />
                   <button class="btn btn-success button1">
-                    <a href="#">Discover</a>
+                    <a href="#">Discover More</a>
                   </button>
                   <button class="btn button2">
                     <a href="#">Contact Us</a>
@@ -143,7 +143,7 @@
                   </p>
                   <br />
                   <button class="btn btn-success button1">
-                    <a href="#">Discover</a>
+                    <a href="#">Discover More</a>
                   </button>
                   <button class="btn button2">
                     <a href="#">Contact Us</a>
@@ -166,13 +166,16 @@
       </div>
     </header>
   </section>
-  <br>
-  <br>
-  <br>
-  <br>
-  <br>
+
+
+
 
   <section id="services">
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
     <div class="container">
       <div class="row">
         <div class="col-md-6 col-lg-6 col-sm-12">
@@ -242,7 +245,8 @@
                   <div class="contains">
                     <h4>HTML5 Web Pages</h4>
                     <p>
-                      Templates are based on Bootstrap 5 CSS framework. You can easily adapt or modify based on your needs.
+                      Templates are based on Bootstrap 5 CSS framework. You can easily adapt or modify based on your
+                      needs.
                     </p>
 
                   </div>
@@ -274,7 +278,7 @@
                   <div class="contains">
                     <h4>Fully Customizable</h4>
                     <p>
-                      If you have any idea or suggestion about new templates, feel free to let us know . 
+                      If you have any idea or suggestion about new templates, feel free to let us know .
                     </p>
 
                   </div>
@@ -283,15 +287,159 @@
             </div>
           </div>
         </div>
-          </div>
-        </div>
       </div>
     </div>
+    </div>
+    </div>
   </section>
+
   <br>
   <br>
   <br>
   <br>
+
+  <section id="busi-sol">
+    <div class="busi container-fluid">
+      <div class="row busi-sol-row">
+        <div class="col-ml-6 col-lg-6 col-sm-12">
+          <h1 class="text-center font-weight-bold bus-font"><span class="white-c">Business</span> <span
+              class="green-c">Solution</span> <span class="white-c">and</span> <br> <span class="orange">Crypto</span>
+            <span class="white-c">Investment</span></h1>
+        </div>
+
+        <div class="col-ml-6 col-lg-6 col-sm-12">
+          <div class="bus-button">
+            <button class="btn btn-success button1">
+              <a href="#">Discover More</a>
+            </button>
+            <button class="btn button2">
+              <a href="#">Contact Us</a>
+            </button>
+          </div>
+
+        </div>
+
+      </div>
+
+
+
+
+
+    </div>
+
+
+  </section>
+
+  <section id="about">
+    <br>
+    <br>
+
+    <div>
+      <p class="text-center para-about"><span class="orange">ABOUT US</span></p>
+      <h1 class="text-center h-about">Know Us Better</h1>
+    </div>
+    <br>
+    <br>
+    <div class="row">
+      <div class="col-md-8 col-lg-8 col-sm-12 ">
+        <div class="about-r-left">
+          <div class="about-button">
+            <button class=" ab-btn ">Web Design</button>
+            <button class=" ab-btn">Graphics</button>
+            <button class=" ab-btn">Web Coding</button>
+
+
+          </div>
+          <br>
+          <br>
+          
+          <div class="container">
+            <div class="about-table">
+              <table class="table">
+                <thead>
+                  <tr>
+                    <th scope="col">Project Title</th>
+                    <th scope="col">Budget</th>
+                    <th scope="col">Deadline</th>
+                    <th scope="col">Client</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <th scope="row"><span class="green-c">Website Redesign</span></th>
+                    <td>$1,500 to $2,200</td>
+                    <td>2022 Dec 12</td>
+                    <td>Web Biz</td>
+                  </tr>
+                  <tr>
+                    <th scope="row"><span class="green-c">Website Renovation</span></th>
+                    <td> $2,500 to $3,600</td>
+                    <td>2022 Dec 10</td>
+                    <td>Online Ads</td>
+                  </tr>
+                  <tr>
+                    <th scope="row"><span class="green-c">Marketing Plan</span></th>
+                    <td>$2,500 to $4,200</td>
+                    <td>2022 Dec 8</td>
+                    <td>Web Biz</td>
+                  </tr>
+                  <tr>
+                    <th scope="row"><span class="green-c">All-new Website</span></th>
+                    <td>$3,000 to $6,600</td>
+                    <td>2022 Dec 2</td>
+                    <td>Web Presence</td>
+                  </tr>
+                </tbody>
+              </table>
+
+
+            </div>
+          </div>
+
+
+
+        </div>
+
+
+      </div>
+
+      <div class="col-md-4 col-lg-4 col-sm-12">
+        <div class="container">
+          <div class="about-r-right">
+          <h4 class="h-right" >Please tell us about your idea <br>and how you want it to be</h4>
+          <br>
+          <br>
+          <p class="para-right">You are allowed to use this template for your websites. You are NOT allowed to redistribute the template
+            ZIP file on any other template websites.
+            <br>
+            <br>
+
+            Thank you for downloading and using our templates. Please tell your friends about our website</p>
+            <br>
+            <br>
+
+          <div class="abt-btn">
+            <button class="btn btn-success button1">
+              <a href="#">Discover More</a>
+            </button>
+            <br>
+            <br>
+
+          </div>
+          <br>
+          <br>
+
+        </div>
+      </div>
+        
+      </div>
+    </div>
+
+  </section>
+
+  <section id="financial-form">
+
+  </section>
 
   <script src="./fontawesome/js/all.js"></script>
   <script src="./bootstrap/js/bootstrap.js"></script>
