--- a/index.html
+++ b/index.html
@@ -746,12 +746,12 @@
   // })
 
   $('.owl-carousel').owlCarousel({
-    loop: false,
+    loop: true,
     margin: 10,
     nav: false,
     dots: true,
-    // autoplay:false,
-    // autoplayTimeout:6000,
+    autoplay:true,
+    autoplayTimeout:4000,
     responsive: {
       0: {
         items: 1
